@@ -370,7 +370,7 @@
 	</taskdef>
 
 	<!-- Target is re-definted here as didn't want to specify ws.root property -->
-	<target  name="runtest" depends="initprops,setOSConditions,asenv-unix,asenv-windows">
+	<target name="runtest" depends="initprops,setOSConditions,asenv-unix,asenv-windows">
 		<record name="${basedir}/runtestng.output" action="start"/>
 
 		<echo message="=============Starting TestNG functional tests from ${testng.xml} ============"/>
@@ -384,6 +384,8 @@
 			<jvmarg value="-Dhttp.port=${glassfish.http.port}"/>
 			<jvmarg value="-DASADMIN=${ASADMIN}" />
 			<jvmarg value="-DAPPCLIENT=${APPCLIENT}"/>
+			<jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
+			<jvmarg value="--illegal-access=debug" />
 			<sysproperty key="glassfish.home" value="${glassfish.home}"/>
 			<sysproperty key="domain.name" value="${domain.name}"/>
 			<sysproperty key="BASEDIR" value="${basedir}"/>
